@@ -1,3 +1,7 @@
+Feb 28, 2007
+
+  * FIXED: Bug#260: errornous integer check.  Keri Harris.
+
 Nov 23, 2006
 
   * NEW: Integrated Paul Singletons changes.  Added test-cases, cleanup
